bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: Missing closing brace `}' assumed here
var fin:Boolean = false ;
^BDR:23: error: ';' expected but 'else' found.
      else {fin=true; }}
      ^